--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -5,7 +5,7 @@
     android:versionName="1.0" >
 
     <uses-sdk
-        android:minSdkVersion="8"
+        android:minSdkVersion="18"
         android:targetSdkVersion="18" />
 
     <application
@@ -26,6 +26,7 @@
             android:name="com.example.poopwage.Timer"
             android:label="@string/title_activity_timer" >
         </activity>
+        <activity android:name="EndPage" android:label="@string/app_name"></activity>
     </application>
 
 </manifest>
